--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
 = AppKit
 
-This project rocks and uses MIT-LICENSE.
+AppKit is a Ruby on Rails framework designed to generate data driven very easily and very fast. 
+
+For more information goto http://appkit.5sigma.io
