Cleaned up dependencies
Set version requirements for several gems.

Changed slim-rails dependency to slim, since some people might want to
use the gem with a different template engine.

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 = AppKit
 
-AppKit is a Ruby on Rails framework designed to generate data driven very easily and very fast. 
+AppKit is a Ruby on Rails framework designed to generate data driven very easily and very fast.
 
 For more information visit http://appkit.5sigma.io
+Check out the reference at http://appkit.5sigma.io/reference/
+Read a tutorial at http://appkit.5sigma.io/tutorial/
